--- a/barix-site-fresh/package.json
+++ b/barix-site-fresh/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start"
   },
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": "20.x" },
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
