--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "next build",
     "start": "next start"
   },
-  "engines": { "node": "20.x" },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
+    "@supabase/supabase-js": "^2.85.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
