--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.85.0",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
