--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.14.0",
     "@supabase/supabase-js": "^2.85.0",
     "next": "^14.2.33",
     "react": "18.3.1",
