--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.14.0",
-    "@supabase/supabase-js": "^2.85.0",
+    "@supabase/supabase-js": "^2.86.0",
     "next": "^14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^6.5.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
