--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@supabase/auth-helpers-nextjs": "^0.14.0",
     "@supabase/supabase-js": "^2.86.0",
     "next": "^14.2.33",
+    "papaparse": "^5.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
-    "stripe": "^20.0.0"
+    "stripe": "^20.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
